move those files back

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,12 +1,12 @@
 site_name: The Field Guide to Open Source in the Newsroom
 pages:
     - Home: INTRODUCTION.md
-    - Chapter 1 - Choosing Open Source, Getting Buy-In: docs/Chapter01-Choosing-Open-Source.md
-    - Chapter 2 - Starting a New Project: docs/Chapter02-Starting-New-Project.md
-    - Chapter 3 - Opening Up An Existing Project: docs/Chapter03-Existing-Projects.md
-    - Chapter 4 - Code & Getting To The First Release: docs/Chapter04-Code-First-Release.md
-    - Chapter 5 - Documentation: docs/Chapter05-Documentation.md
-    - Chapter 6 - Working With Community: docs/Chapter06-Community.md
-    - Chapter 7 - Managing Releases: docs/Chapter07-Releases.md
-    - Chapter 8 - Handoffs & Sunsets: docs/Chapter08-Handoffs-Sunsets.md
+    - Chapter 1 - Choosing Open Source, Getting Buy-In: Chapter01-Choosing-Open-Source.md
+    - Chapter 2 - Starting a New Project: Chapter02-Starting-New-Project.md
+    - Chapter 3 - Opening Up An Existing Project: Chapter03-Existing-Projects.md
+    - Chapter 4 - Code & Getting To The First Release: Chapter04-Code-First-Release.md
+    - Chapter 5 - Documentation: Chapter05-Documentation.md
+    - Chapter 6 - Working With Community: Chapter06-Community.md
+    - Chapter 7 - Managing Releases: Chapter07-Releases.md
+    - Chapter 8 - Handoffs & Sunsets: Chapter08-Handoffs-Sunsets.md
 theme: readthedocs
