hmm maybe it HAS to be named index.md

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,6 @@
 site_name: The Field Guide to Open Source in the Newsroom
 pages:
-    - Home: INTRODUCTION.md
+    - Home: index.md
     - Chapter 1 - Choosing Open Source, Getting Buy-In: Chapter01-Choosing-Open-Source.md
     - Chapter 2 - Starting a New Project: Chapter02-Starting-New-Project.md
     - Chapter 3 - Opening Up An Existing Project: Chapter03-Existing-Projects.md
