--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -9,4 +9,5 @@ pages:
     - Chapter 6 - Working With Community: Chapter06-Community.md
     - Chapter 7 - Managing Releases: Chapter07-Releases.md
     - Chapter 8 - Handoffs & Sunsets: Chapter08-Handoffs-Sunsets.md
+    - Help: help.md
 theme: readthedocs
