--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -4,5 +4,16 @@
 # Required
 version: 2
 
+# Set the version of Python and other tools you might need
+build:
+  os: ubuntu-22.04
+  tools:
+    python: "3.11"
+
+# Explicitly set the version of Python and its requirements
+python:
+  install:
+    - requirements: requirements.txt
+
 mkdocs:
   configuration: mkdocs.yml
